Fixing logo alignment - fixes #218

--- a/styleguide/assets/sass/modules/_logo.scss
+++ b/styleguide/assets/sass/modules/_logo.scss
@@ -179,4 +179,9 @@
   line-height: 1;
   background-color: $c-blue;
   border-radius: 22px;
+
+  .us-icon--uswitch {
+    position: relative;
+    right: -2px;
+  }
 }
